Fixed swagger documentation, condensed models
